adds product-map

--- a/projects/milya.html
+++ b/projects/milya.html
@@ -51,10 +51,10 @@
 </div>
 <div class="milya-ov-para">
   <h2>
-Milya, or short for “familya” (family in filipino)
+Milya, or short for “pamilya” (family in filipino)
 is a multi-function messenger oriented towards families that are separated
-by economic reasons. Intended for Overseas Foreign Workers (OFW),
-Milya is a product that connects families emotionally.</h2>
+by financial instability. It is intended for Overseas Foreign Workers (OFW),who need a platform
+to connect with their families emotionally and for practical reseaons.</h2>
 </div>
 <div class="milya-ov-title">
   <h3>Inspiration</h3>
@@ -69,7 +69,7 @@ Milya is a product that connects families emotionally.</h2>
 </div>
 </section>
 
-<section class="milya-problem">
+<section class="milya-problem milya-problem-d">
   <div class="milya-title">
     <h3> Defining</h3>
     <h3>The Problem</h3>
@@ -150,7 +150,7 @@ Milya is a product that connects families emotionally.</h2>
 </section>
 
 
-<section class="milya-problem">
+<section class="milya-problem milya-problem-s">
   <div class="milya-title">
     <h3> Sorting</h3>
     <h3>The Problem</h3>
@@ -216,6 +216,7 @@ Milya is a product that connects families emotionally.</h2>
   </div>
   <div class="milya-persona-card">
     <div class="milya-card-name">
+      <div id="jessica"></div>
       <h2> Jessica Gonzalez</h2>
     </div>
     <div class="milya-card-description">
@@ -260,6 +261,7 @@ Milya is a product that connects families emotionally.</h2>
   </div>
   <div class="milya-persona-card">
     <div class="milya-card-name">
+      <div id="johncarlo"></div>
       <h2> John Carlo Gonzalez</h2>
     </div>
     <div class="milya-card-description">
@@ -301,6 +303,7 @@ Milya is a product that connects families emotionally.</h2>
   </div>
   <div class="milya-persona-card">
     <div class="milya-card-name">
+      <div id="eric"></div>
       <h2> Eric Michael Gonzalez</h2>
     </div>
     <div class="milya-card-description">
@@ -344,6 +347,7 @@ Milya is a product that connects families emotionally.</h2>
   </div>
   <div class="milya-persona-card">
     <div class="milya-card-name">
+      <div id="herman"></div>
       <h2>  Herman Gonzalez</h2>
     </div>
     <div class="milya-card-description">
@@ -356,86 +360,84 @@ Milya is a product that connects families emotionally.</h2>
         </li>
         <li>
         <p>
-          Occupation:<br> broker 
+          Occupation:<br> broker
         </p>
         </li>
         <li>
-        <p>Family Member:<br> Eldest Child</p>
+        <p>Family Member:<br> Father</p>
         </li>
         <li>
-          <p>Personal Goals: Social Life & Volleyball</p>
+          <p>Personal Goals: <br>
+            Family security and provide financially</p>
         </li>
       </ul>
     </div>
     <div class="milya-card-description">
       <ul>
         <li>
-          <p>Age: <br>17</p>
+          <p>Values:<br>Prioritising Family Issues</p>
         </li>
         <li>
-          <p>Gender: <br>Female</p>
+          <p>Fears:<br>Absent in his children's upbringing</p>
         </li>
         <li>
         <p>
-          School:<br> De LaSalle University
+          Technological Literacy:<br>Medium
         </p>
-        </li>
-        <li>
-        <p>Family Member:<br> Eldest Child</p>
-        </li>
-        <li>
-          <p>Personal Goals: Social Life & Volleyball</p>
         </li>
       </ul>
     </div>
   </div>
   <div class="milya-persona-card">
     <div class="milya-card-name">
+      <div id="theressa"></div>
       <h2> Theressa Gonzalez</h2>
     </div>
     <div class="milya-card-description">
       <ul>
         <li>
-          <p>Age: <br>17</p>
+          <p>Age: <br>43</p>
         </li>
         <li>
           <p>Gender: <br>Female</p>
         </li>
         <li>
         <p>
-          School:<br> De LaSalle University
+          Occupation:<br> Nurse
         </p>
         </li>
         <li>
-        <p>Family Member:<br> Eldest Child</p>
+        <p>Family Member:<br> Mother</p>
         </li>
         <li>
-          <p>Personal Goals: Social Life & Volleyball</p>
+          <p>Personal Goals: Save enough money in order to live back home with her children</p>
         </li>
       </ul>
     </div>
     <div class="milya-card-description">
       <ul>
         <li>
-          <p>Age: <br>17</p>
+          <p>Values: <br>save money and prioritise family matters</p>
         </li>
         <li>
-          <p>Gender: <br>Female</p>
+          <p>Fears: <br>Her children growing apart from her</p>
         </li>
         <li>
         <p>
-          School:<br> De LaSalle University
+          Technological Literacy:<br> Medium
         </p>
-        </li>
-        <li>
-        <p>Family Member:<br> Eldest Child</p>
-        </li>
-        <li>
-          <p>Personal Goals: Social Life & Volleyball</p>
         </li>
       </ul>
     </div>
   </div>
+</section>
+
+
+<section class="milya-product-map">
+  <div class="milya-title">
+    <h3> Product Map</h3>
+  </div>
+  <div class="milya-product-box"></div>
 </section>
 
 
