--- a/projects/milya.html
+++ b/projects/milya.html
@@ -440,6 +440,27 @@ to connect with their families emotionally and for practical reseaons.</h2>
   <div class="milya-product-box"></div>
 </section>
 
+<section class="milya-flows">
+  <div class="milya-title">
+    <h3> Userflows</h3>
+  </div>
+  <div class="milya-flow-card" id="milya-flow1"></div>
+  <div class="milya-flow-card" id="milya-flow2"></div>
+  <div class="milya-flow-card" id="milya-flow3"></div>
+</section>
+
+
+<section class="milya-wireframes">
+  <div class="milya-title">
+    <h3> Wireframes </h3>
+  </div>
+  <div class="milya-wireframe-card" id="milya-wireframe1"></div>
+  <div class="milya-wireframe-card" id="milya-wireframe2"></div>
+  <div class="milya-wireframe-card" id="milya-wireframe3"></div>
+  <div class="milya-wireframe-card" id="milya-wireframe4"></div>
+  <div class="milya-wireframe-card" id="milya-wireframe5"></div>
+</section>
+
 
 </content>
 
