--- a/projects/milya.html
+++ b/projects/milya.html
@@ -462,6 +462,15 @@ to connect with their families emotionally and for practical reseaons.</h2>
 </section>
 
 
+<section class="milya-lowf">
+  <div class="milya-title">
+    <h3>Low Fidelity Designs </h3>
+  </div>
+  <div class="milya-wireframe-card" id="milya-lowf1"></div>
+  <div class="milya-wireframe-card" id="milya-lowf2"></div>
+  <div class="milya-wireframe-card" id="milya-lowf3"></div>
+</section>
+
 </content>
 
 
