soft lunch milya

--- a/projects/milya.html
+++ b/projects/milya.html
@@ -471,6 +471,52 @@ to connect with their families emotionally and for practical reseaons.</h2>
   <div class="milya-wireframe-card" id="milya-lowf3"></div>
 </section>
 
+
+
+<section class="milya-onboarding">
+<div class="milya-title">
+<h3> Onboarding</h3>
+</div>
+<div class="milya-signups" id="milya-signup1"></div>
+<div class="milya-signups" id="milya-signup2"></div>
+<div class="milya-signups" id="milya-signup3"></div>
+<div class="milya-signups" id="milya-signup4"></div>
+<div class="milya-signups" id="milya-signup5"></div>
+</section>
+
+<section class="milya-mainscreens">
+<div class="milya-title">
+<h3> Mainscreens </h3>
+</div>
+<div class="milya-main" id="milya-mainscreen1"></div>
+<div class="milya-main" id="milya-mainscreen2"></div>
+<div class="milya-main" id="milya-mainscreen3"></div>
+</section>
+
+
+<section class="milya-messenger">
+<div class="milya-title">
+<h3>Messneger</h3>
+</div>
+<div class="milya-messenger-screens" id="milya-messenger1"></div>
+<div class="milya-messenger-screens" id="milya-messenger2"></div>
+<div class="milya-messenger-screens" id="milya-messenger3"></div>
+<div class="milya-messenger-screens" id="milya-messenger4"></div>
+<div class="milya-messenger-screens" id="milya-messenger5"></div>
+</section>
+
+<section class="milya-wallet">
+<div class="milya-title">
+<h3> Wallet </h3>
+</div>
+<div class="milya-wallet-screens" id="milya-wallet1"></div>
+<div class="milya-wallet-screens" id="milya-wallet2"></div>
+<div class="milya-wallet-screens" id="milya-wallet3"></div>
+<div class="milya-wallet-screens" id="milya-wallet4"></div>
+<div class="milya-wallet-screens" id="milya-wallet5"></div>
+<div class="milya-wallet-screens" id="milya-wallet6"></div>
+</section>
+
 </content>
 
 
