--- a/info.html
+++ b/info.html
@@ -29,9 +29,6 @@
     <h4> Justin</h4>
     <h4> Veneracion</h4>
   </div>
-  <div class="info-splash">
-    1
-  </div>
 </section>
 
 <section class="bio">
@@ -121,13 +118,50 @@ clear collaboration, strong sense of design thinking
 <h3> Essentials</h3>
   </div>
   <div class="essentials-splash">
-2
   </div>
   <div class="essentials-list">
-    <h2> List </h2>
+    <ul>
+      <li>
+        <p> Apple Macbook Pro</p>
+      </li>
+      <li>
+        <p>Sony A7ii + 28-75mm</p>
+      </li>
+      <li>
+        <p>Wilson Evolution Basketball</p>
+      </li>
+      <li>
+        <p>Timex Archive Camper MK1</p>
+      </li>
+      <li>
+        <p>Common Projects Wallet</p>
+      </li>
+    </ul>
   </div>
   <div class="essentials-list">
-<h2> List </h2>
+    <ul>
+    <li>
+      <p>Canadian Passport</p>
+    </li>
+    <li>
+      <p>Hand Sanitizer</p>
+    </li>
+    <li>
+      <p>Tom Ford Glasses</p>
+    </li>
+    <li>
+      <p>iPhone X</p>
+    </li>
+    <li>
+      <p>Common Projects Achillies</p>
+    </li>
+    <li>
+      <p>Zojirushi Coffee Tumbler</p>
+    </li>
+    <li>
+      <p> Reigning Champ Cap</p>
+    </li>
+    </ul>
   </div>
 </section>
 
