--- a/projects/illustrations.html
+++ b/projects/illustrations.html
@@ -45,45 +45,45 @@
   <div class="illustration-overview">
     <h3>01 Identity Theft</h3>
   </div>
-  <div class="idtheft-1"> 1 </div>
-  <div class="idtheft-2"> 2 </div>
-  <div class="idtheft-3"> 3 </div>
+  <div class="idtheft-1" id="idtheft1"></div>
+  <div class="idtheft-2" id="idtheft1"></div>
+  <div class="idtheft-3" id="idtheft3"></div>
 </section>
 
 <section class="illustration-esports">
   <div class="illustration-overview">
     <h3>02 E Sports </h3>
   </div>
-  <div class="esports-1"></div>
-  <div class="esports-2"></div>
-  <div class="esports-3"></div>
-  <div class="esports-4"></div>
-  <div class="esports-5"></div>
-  <div class="esports-6"></div>
+  <div class="esports-1" id="esports1"></div>
+  <div class="esports-2" id="esports2"></div>
+  <div class="esports-3" id="esports3"></div>
+  <div class="esports-4" id="esports4"></div>
+  <div class="esports-5" id="esports5"></div>
+  <div class="esports-6" id="esports6"></div>
 </section>
 
 <section class="illustration-legup">
   <div class="illustration-overview">
     <h3> 03 Leg Up</h3>
   </div>
-  <div class="legup"></div>
+  <div class="legup" id="legup"></div>
 </section>
 
 <section class="illustration-editorial">
   <div class="illustration-overview">
     <h3> 04 Editorial</h3>
   </div>
-  <div class="editorial"></div>
+  <div class="editorial" id="editorial"></div>
 </section>
 
 <section class="illustration-1password">
   <div class="illustration-overview">
     <h3> 05 1Password</h3>
   </div>
-  <div class="agile1"></div>
-  <div class="agile2"></div>
-  <div class="agile3"></div>
-  <div class="agile4"></div>
+  <div class="agile1" id="1pass1"></div>
+  <div class="agile2" id="1pass2"></div>
+  <div class="agile3" id="1pass3"></div>
+  <div class="agile4" id="1pass4"></div>
 </section>
 
 </content>
