adds new images

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -158,18 +158,18 @@
   <div class="process-title">
     <h3> 05 User Flows </h3>
   </div>
-  <div class="swish-userflow-box"></div>
-  <div class="swish-userflow-box"></div>
+  <div class="swish-userflow-box" id="swish-us1"></div>
+  <div class="swish-userflow-box" id="swish-us2"></div>
 </section>
 
 <section class="swish-sketches">
   <div class="swish-sketch-title">
     <h3> 06 Sketches </h3>
   </div>
-  <div class="swish-sketch-box">1</div>
-  <div class="swish-sketch-box">2</div>
-  <div class="swish-sketch-box">3</div>
-  <div class="swish-sketch-box">4</div>
+  <div class="swish-sketch-box" id="swish-sketch1"></div>
+  <div class="swish-sketch-box" id="swish-sketch2"></div>
+  <div class="swish-sketch-box" id="swish-sketch3"></div>
+  <div class="swish-sketch-box" id="swish-sketch4"></div>
 </section>
 
 
@@ -195,12 +195,14 @@
   <div class="swish-browser-title">
     <h3> Browser extentsion</h3>
   </div>
-  <div class="swish-browser1"></div>
-  <div class="swish-browser1"></div>
-  <div class="swish-browser1"></div>
-  <div class="swish-browser1"></div>
-  <div class="swish-browser1"></div>
-  <div class="swish-browser1"></div>
+  <div class="swish-browser" id="browser-cart"></div>
+  <div class="swish-browser" id="browser-delivery"></div>
+  <div class="swish-browser" id="browser-item"></div>
+  <div class="swish-browser" id="browser-notifications"></div>
+  <div class="swish-browser" id="browser-orders"></div>
+  <div class="swish-browser" id="browser-profile"></div>
+  <div class="swish-browser" id="browser-sneakers"></div>
+  <div class="swish-browser" id="browser-wishlist"></div>
 </section>
 
 </content>
