hides process section temp

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -64,7 +64,7 @@
    </div>
 </section>
 
-<section class="swish-process">
+<!-- <section class="swish-process">
   <div class="process-title">
     <h3> 03 Process </h3>
   </div>
@@ -152,7 +152,7 @@
       and compiles all your wishlisted items across all
       online stores you are logged into. </p>
   </div>
-</section>
+</section> -->
 
 <section class="swish-userflows">
   <div class="process-title">
