adds mobile screens

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -132,7 +132,7 @@
 
 <section class="swish-personas">
   <div class="process-title">
-    <h3> 04 Personas</h3>
+    <h3>Personas</h3>
   </div>
 
   <div class="swish-process-box">
@@ -156,7 +156,7 @@
 
 <section class="swish-userflows">
   <div class="process-title">
-    <h3> 05 User Flows </h3>
+    <h3>User Flows </h3>
   </div>
   <div class="swish-userflow-box" id="swish-us1"></div>
   <div class="swish-userflow-box" id="swish-us2"></div>
@@ -164,7 +164,7 @@
 
 <section class="swish-sketches">
   <div class="swish-sketch-title">
-    <h3> 06 Sketches </h3>
+    <h3>Sketches </h3>
   </div>
   <div class="swish-sketch-box" id="swish-sketch1"></div>
   <div class="swish-sketch-box" id="swish-sketch2"></div>
@@ -173,7 +173,61 @@
 </section>
 
 
-<section class="swish-mobile">
+<section class="mobile-onboard">
+  <div class="swish-title">
+  <h3> Sign Up</h3>
+  </div>
+  <div class="swish-mobile-card" id="swish-mobile-onboard1"></div>
+  <div class="swish-mobile-card" id="swish-mobile-onboard2"></div>
+  <div class="swish-mobile-card" id="swish-mobile-onboard3"></div>
+  <div class="swish-mobile-card" id="swish-mobile-onboard4"></div>
+</section>
+
+<section class="mobile-orders">
+  <div class="swish-title">
+  <h3> Main Screens</h3>
+  </div>
+  <div class="swish-mobile-card" id="swish-mobile-profile"></div>
+  <div class="swish-mobile-card" id="swish-mobile-order1"></div>
+  <div class="swish-mobile-card" id="swish-mobile-order2"></div>
+  <div class="swish-mobile-card" id="swish-mobile-order3"></div>
+</section>
+
+<section class="mobile-wishlist">
+  <div class="swish-title">
+  <h3> Wishlist</h3>
+  </div>
+  <div class="swish-mobile-card" id="swish-mobile-wishlist1"></div>
+  <div class="swish-mobile-card" id="swish-mobile-wishlist2"></div>
+  <div class="swish-mobile-card" id="swish-mobile-wishlist3"></div>
+  <div class="swish-mobile-card" id="swish-mobile-wishlist4"></div>
+</section>
+
+<section class="mobile-notification">
+  <div class="swish-title">
+  <h3>Notifications</h3>
+  </div>
+  <div class="swish-mobile-card" id="swish-mobile-notification1"></div>
+  <div class="swish-mobile-card" id="swish-mobile-notification2"></div>
+  <div class="swish-mobile-card" id="swish-mobile-notification3"></div>
+  <div class="swish-mobile-card" id="swish-mobile-notification4"></div>
+</section>
+
+
+<section class="mobile-cart">
+  <div class="swish-title">
+  <h3>Cart</h3>
+  </div>
+  <div class="swish-mobile-card" id="swish-mobile-cart1"></div>
+  <div class="swish-mobile-card" id="swish-mobile-cart2"></div>
+  <div class="swish-mobile-card" id="swish-mobile-cart3"></div>
+  <div class="swish-mobile-card" id="swish-mobile-cart4"></div>
+  <div class="swish-mobile-card" id="swish-mobile-cart5"></div>
+  <div class="swish-mobile-card" id="swish-mobile-cart6"></div>
+</section>
+
+
+<!-- <section class="swish-mobile">
 <div class="swish-screen1"></div>
 <div class="swish-wishlist"></div>
 <div class="swish-delivery"></div>
@@ -189,7 +243,7 @@
 <div class="swish-screen1"></div>
 <div class="swish-wishlist"></div>
 <div class="swish-delivery"></div>
-</section>
+</section> -->
 
 <section class="swish-br-box">
   <div class="swish-browser-title">
