update on swish and airmax pages

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -130,7 +130,7 @@
   </div>
 </section>-->
 
-<section class="swish-personas">
+<!-- <section class="swish-personas">
   <div class="process-title">
     <h3>Personas</h3>
   </div>
@@ -152,7 +152,58 @@
       and compiles all your wishlisted items across all
       online stores you are logged into. </p>
   </div>
+</section> -->
+
+<section class="swish-persona">
+<div class="swish-title">
+<h3> Personas</h3>
+</div>
+<div class="swish-persona-box">
+  <div class="swish-persona-image" id="persona-david">
+  </div>
+  <div class="swish-persona-description">
+    <h2>David</h2>
+    <ul>
+      <li>
+        <b>Age:</b>
+        <p>21</p>
+      </li>
+      <li>
+        <b>Occupation:</b> <p>Student</p>
+      </li>
+      <li>
+        <b>Behaviours</b>
+        <li><p>-Minimal shopping</p></li>
+        <li><p>-Research before buying</p></li>
+        <li><p>-Strong loyalty to trusted brands</p></li>
+      </li>
+    </ul>
+  </div>
+</div>
+<div class="swish-persona-box">
+  <div class="swish-persona-image" id="persona-crystal">
+  </div>
+  <div class="swish-persona-description">
+    <h2>Crystal</h2>
+    <ul>
+      <li>
+        <b>Age:</b>
+        <p>25</p>
+      </li>
+      <li>
+        <b>Occupation:</b> <p>Accountant</p>
+      </li>
+      <li>
+        <b>Behaviours</b>
+        <li><p>-Loves online window shopping</p></li>
+        <li><p>-Most likely to buy implusively</p></li>
+        <li><p>-High buyers remorse</p></li>
+      </li>
+    </ul>
+  </div>
+</div>
 </section>
+
 
 <section class="swish-userflows">
   <div class="process-title">
@@ -161,6 +212,14 @@
   <div class="swish-userflow-box" id="swish-us1"></div>
   <div class="swish-userflow-box" id="swish-us2"></div>
 </section>
+
+<section class="swish-product-map">
+  <div class="swish-title">
+    <h3> Product Map</h3>
+  </div>
+  <div class="swish-product-box" id="swish-product-map"></div>
+</section>
+
 
 <section class="swish-sketches">
   <div class="swish-sketch-title">
