--- a/projects/airmaxday.html
+++ b/projects/airmaxday.html
@@ -30,11 +30,12 @@
     <h4> Airmax Day</h4>
   </div>
   <div class="nike-description">
-    <p>Kids today are on social media 24/7
-    and all they think about is about random stuff
+    <p>An interpretation of Nike Air Max Day expressed in motion design and typography
     </p>
   </div>
-  <div class="nike-splash-box"></div>
+  <div class="nike-splash-box">
+    <iframe src="https://player.vimeo.com/video/257788195" width="100%" height="100%" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
 </section>
 
 <section class="nike-grid">
