adds low f section and image optim screens

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     He is a recent graduate from York/Sheridan with professional experience in human centered design and a bit front-end development.</h1>
 
 
-  <a class="temporary" href="https://venerism.github.io/blog/">Click to see temporary projects page </a>
+  <!-- <a class="temporary" href="https://venerism.github.io/blog/">
+    Click to see temporary projects page </a> -->
 </div>
 
 </section>
