--- a/projects/milya.html
+++ b/projects/milya.html
@@ -32,7 +32,7 @@
   <div class="milya-description">
     <caption> The Challenge</caption>
     <p>
-    Create a digital platform focused on long distance family relationships.
+    Create a digital platform focused on long-distance family relationships.
     </p>
   </div>
   <div class="milya-description">
@@ -51,10 +51,8 @@
 </div>
 <div class="milya-ov-para">
   <h2>
-Milya, or short for “pamilya” (family in filipino)
-is a multi-function messenger oriented towards families that are separated
-by financial instability. It is intended for Overseas Foreign Workers (OFW),who need a platform
-to connect with their families emotionally and for practical reseaons.</h2>
+
+    Milya, or short for “pamilya” (family in Filipino) is a multi-function messenger oriented towards families that are separated by financial instability. It is intended for Overseas Foreign Workers (OFW), who need a platform to connect with their families emotionally and for practical reasons.</h2>
 </div>
 <div class="milya-ov-title">
   <h3>Inspiration</h3>
@@ -83,9 +81,8 @@ to connect with their families emotionally and for practical reseaons.</h2>
     </p>
   <li>
     <p>
-    Birthdays, holidays and special occasions like:
-    graduations, sports events and etc. are difficult
-    to compress how much they miss each other.
+  Birthdays, holidays and special occasions like
+  graduations, sports events and etc. are difficult to compress how much they miss each other.
     </p>
   </li>
   <li>
@@ -103,13 +100,13 @@ to connect with their families emotionally and for practical reseaons.</h2>
   <li>
     <p>
     OFW children feel uncertain why their parents
-  	left in the first place, despite economic evidence.
+    left in the first place, despite the economic evidence.
     </p>
   </li>
   <li>
     <p>
     OFW children sometimes feel abandoned  
-    and this results them to act rebelious.
+    and this results them to act rebellious.
     </p>
   </li>
 </ul>
@@ -124,7 +121,7 @@ to connect with their families emotionally and for practical reseaons.</h2>
   <li>
     <p>
     OFW parents may feel that their children
-    does not recognize them anymore
+    do not recognize them anymore
     </p>
   </li>
   <li>
