--- a/projects/swish.html
+++ b/projects/swish.html
@@ -28,41 +28,118 @@
     <h4>Swish</h4>
   </div>
   <div class="swish-challenge">
-    <caption> The Challenge</caption>
-    <p>Kids today are on social media 24/7
-    and all they think about is about random stuff
+    <caption> The Problem</caption>
+    <p> The lack of empathy and human interaction in online shopping services
     </p>
   </div>
   <div class="swish-solution">
     <caption> The Solution</caption>
-    <p>Kids today are on social media 24/7
-    and all they think about is about random stuff
+    <p>Create a browser extension and a mobile application to provide shoppers a better
+      shopping experience
     </p>
   </div>
   <div class="swish-title-splash swish-splash"></div>
 </section>
 
 <section class="swish-introduction">
-  <div class="swish-overview-title"> <h3>01 Overview</h3> </div>
+  <div class="swish-overview-title"> <h3> Overview</h3> </div>
   <div class="swish-overview-para">
     <h2>Swish is a browser and mobile application extentsion
       that creates a better online shopping experience. One of Swish’s
       key features is that it collects and compiles all your wishlisted
       items across all online stores you are logged into. </h2> </div>
-  <div class="swish-inspiration-title"> <h3>02 Inspiration</h3> </div>
+  <div class="swish-inspiration-title"> <h3>Inspiration</h3> </div>
   <div class="swish-inspiration-para">
-    <h2>Swish is a browser and mobile application extentsion
-      that creates a better online shopping experience. One of Swish’s
-      key features is that it collects and compiles all your wishlisted
-      items across all online stores you are logged into. </h2>
+    <h2>I created swish because I mostly do my purchases online.
+      Recently, I bought a pair of shoes and after receiving them,
+      I felt a strong sense of buyers remorse despite all the research
+      and decision making I had prior to the purchase. This made me realize
+      that even though online shopping has become seamless and easy to use
+      over the years, it does not mean that there isn’t room for any improvement. </h2>
       <br>
-      <h2>Swish is a browser and mobile application extentsion
-        that creates a better online shopping experience. One of Swish’s
-        key features is that it collects and compiles all your wishlisted
-        items across all online stores you are logged into. </h2>
+      <h2>The features that Swish provides came from the idea of
+        solving my own (and the people I interviewed) personal issues
+        and concerns about online shopping. </h2>
 
    </div>
 </section>
+
+
+<section class="swish-problems">
+  <div class="swish-title">
+    <h3> Defining <br>The Problem</h3>
+  </div>
+  <div class="swish-problem-box">
+    <ul>
+      <li>
+        <h5>Shoppers prematurely purchase Items before it goes on sale</h5>
+      </li>
+      <li>
+        <h5>No platform to compare prices</h5>
+      </li>
+      <li>
+        <h5>Shoppers miss their parcel's
+          <br>
+           delivery date</h5>
+      </li>
+      <li>
+        <h5>Hidden custom and duty fees</h5>
+      </li>
+    </ul>
+  </div>
+</section>
+
+<section class="swish-solutions">
+  <div class="swish-title">
+    <h3> Prioritising
+      <br>
+      The Solutions</h3>
+  </div>
+  <div class="swish-solutions-box">
+    <ul>
+      <li>
+      <b> Cross Website Comparisons</b>
+      <br>
+      <h2>Build a Universal Wishlist. It compiles all your items across all your wishlists into one singular list.</h2>
+      </li>
+      <li>
+      <b>Missing out promotions and Sales</b>
+      <br>
+      <h2>Notifying users about promotions and deals + Automatically switches items if items is cheaper.</h2>
+      </li>
+      <li>
+      <b>Low Stock / Sold out item</b>
+      <br>
+      <h2>Notification if stock is low and back in stock
++ and if sold out, the application recommends same product from different store.</h2>
+      </li>
+      <li>
+      <b>Missing Deliveries</b>
+      <br>
+      <h2>Detailed delivery tracking + ability to leave not to service provider, pre-authorization & ability to pay for shipping + duty fees prior to delivery.</h2>
+      </li>
+      <li>
+      <b>Hidden customs & duty fees</b>
+      <br>
+      <h2>Customs and Duty fees are calculated  and provided estimated into the total.</h2>
+      </li>
+      <li>
+      <b>Confusing return and exchange policies</b>
+      <br>
+      <h2>Quick & easy access to return/exchange policies
+from sellers. + notification of return/exchange expiration date.</h2>
+      </li>
+    </ul>
+  </div>
+</section>
+
+<section class="swish-product-map">
+  <div class="swish-title">
+    <h3> Product Map</h3>
+  </div>
+  <div class="swish-product-box" id="swish-product-map"></div>
+</section>
+
 
 <!-- <section class="swish-process">
   <div class="process-title">
@@ -213,12 +290,6 @@
   <div class="swish-userflow-box" id="swish-us2"></div>
 </section>
 
-<section class="swish-product-map">
-  <div class="swish-title">
-    <h3> Product Map</h3>
-  </div>
-  <div class="swish-product-box" id="swish-product-map"></div>
-</section>
 
 
 <section class="swish-sketches">
@@ -229,6 +300,15 @@
   <div class="swish-sketch-box" id="swish-sketch2"></div>
   <div class="swish-sketch-box" id="swish-sketch3"></div>
   <div class="swish-sketch-box" id="swish-sketch4"></div>
+</section>
+
+<section class="swish-low">
+  <div class="swish-title">
+    <h3> Low Fidelity Mockups</h3>
+  </div>
+  <div class="swish-low-box" id="swish-low-f">
+
+  </div>
 </section>
 
 
