--- a/projects/airmaxday.html
+++ b/projects/airmaxday.html
@@ -39,16 +39,16 @@
 </section>
 
 <section class="nike-grid">
-  <div class=" nike-default nike-box-s1"> 1 </div>
-  <div class=" nike-default nike-box-s2"> 2 </div>
-  <div class=" nike-default nike-box-s3"> 3 </div>
-  <div class=" nike-default nike-box-s4"> 4 </div>
-  <div class=" nike-default nike-box-l1"> 5 </div>
-  <div class=" nike-default nike-box-s5"> 6 </div>
-  <div class=" nike-default nike-box-s6"> 7 </div>
-  <div class=" nike-default nike-box-s7"> 8 </div>
-  <div class=" nike-default nike-box-s8"> 9 </div>
-  <div class=" nike-default nike-box-l2"> 10 </div>
+  <div class=" nike-default nike-box-s1 nike-screen-img" id="nike-screen1"> 1 </div>
+  <div class=" nike-default nike-box-s2 nike-screen-img" id="nike-screen2"> 2 </div>
+  <div class=" nike-default nike-box-s3 nike-screen-img" id="nike-screen3"> 3 </div>
+  <div class=" nike-default nike-box-s4 nike-screen-img" id="nike-screen4"> 4 </div>
+  <div class=" nike-default nike-box-l1 nike-screen-img" id="nike-screen5"> 5 </div>
+  <div class=" nike-default nike-box-s5 nike-screen-img" id="nike-screen6"> 6 </div>
+  <div class=" nike-default nike-box-s6 nike-screen-img" id="nike-screen7"> 7 </div>
+  <div class=" nike-default nike-box-s7 nike-screen-img" id="nike-screen8"> 8 </div>
+  <div class=" nike-default nike-box-s8 nike-screen-img" id="nike-screen9"> 9 </div>
+  <!-- <div class=" nike-default nike-box-l2 nike-screen-img"> 10 </div> -->
 </section>
 
 
