changes wording to swish overview

--- a/projects/swish.html
+++ b/projects/swish.html
@@ -45,9 +45,12 @@
   <div class="swish-overview-title"> <h3> Overview</h3> </div>
   <div class="swish-overview-para">
     <h2>Swish is a browser and mobile application extentsion
-      that creates a better online shopping experience. One of Swish’s
-      key features is that it collects and compiles all your wishlisted
-      items across all online stores you are logged into. </h2> </div>
+      that creates a better online shopping experience.
+      The three main features Swish offers to its users is that it collects
+      and complies all items across online stores into one list,
+      it gives detailed information about ongoing parcels and it gives you a better post purchase
+      experience by reminding you about purchased item's return policy.
+     </h2> </div>
   <div class="swish-inspiration-title"> <h3>Inspiration</h3> </div>
   <div class="swish-inspiration-para">
     <h2>I created swish because I mostly do my purchases online.
